// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicationsSelectAll render unchecked if all publications are not part of the selection 1`] = `
<Checkbox
  checked={false}
  onChange={[Function]}
/>
`;

exports[`PublicationsSelectAll renders checked if all publications are part of the selection 1`] = `
<Checkbox
  checked={true}
  onChange={[Function]}
/>
`;

exports[`PublicationsSelectAll renders disabled 1`] = `
<Checkbox
  disabled={true}
  onChange={[Function]}
/>
`;
